fixed problem with screen height being too big

--- a/80151_kiosk/css/toyotatouch.css
+++ b/80151_kiosk/css/toyotatouch.css
@@ -116,7 +116,7 @@ body {
 }
 
 .row {
-	margin-bottom: 20px;
+	margin-bottom: 17px;
 	float: left;
 }
 
